--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -15,8 +15,9 @@
     <link href="Client.styles.css" rel="stylesheet" />
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link href="_content/Syncfusion.Blzor.Themes/bootstrap5.css" rel="stylesheet"/>
-    <script src="_content/Syncfusion.Blzor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet"/>
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 
 <body>
