--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -16,8 +16,7 @@
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet"/>
-    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 </head>
 
 <body>
